implement Create Timesheet action

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Users index page</h2>
 <%= link_to 'Create New User', new_user_path %>
-<table>
+<table class="table">
   <tr>
     <th>Name</th>
     <th>Email</th>
