--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<h2>Edit User Page</h2>
+<%= flash[:notice] unless flash[:notice].blank? %>
+<%= form_for @user do |f| %>
+<%= render partial: 'form', locals:{f:f} %>
+<%= f.submit %>
+<% end %>
