--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,4 +7,5 @@
   <li>Role: <%= @user.role %></li>
   <li>Created: <%= @user.created_at %></li>
   <li>Updated: <%= @user.updated_at %></li>
+  <li>Password: <%= @user.password_digest %></li>
 </ul>
